force-app/main/default/objects/Dynacat_Attribute__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Only Active fields will be included in filters. If an Inactive root-level filter is included in a configuration, bad things will occur!</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>