force-app/main/default/objects/Dynacat_Attribute__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>The order is only relevant for child attributes, the order of root-level attributes is determined by the Dynacat deployment settings.</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>