force-app/main/default/objects/Dynacat_Attribute__c/fields/Selectable__c.field-meta.xml
<CustomField>
    <fullName>Selectable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Selectable attributes will have a checkbox next to them.  Unselectable attributes will not.</inlineHelpText>
    <label>Selectable</label>
    <type>Checkbox</type>
</CustomField>